Started work in the DataBuffer class. Need to work on the add_record method to clean data source of unneded information or research how to inject specific parts of keys.

--- a/OCRDataCapture.ipynb
+++ b/OCRDataCapture.ipynb
@@ -439,10 +439,122 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8262b35",
+   "metadata": {},
+   "source": [
+    "## Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e1d0add7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "General imports needed.\n",
+    "\"\"\"\n",
+    "# foundational libraries\n",
+    "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "from zoneinfo import ZoneInfo\n",
+    "import pytz  # may need to migrate to ZoneInfo\n",
+    "import requests\n",
+    "\n",
+    "# OCR tools\n",
+    "import pytesseract\n",
+    "# Bridge to cli tool. Need to install tesseract CLI engine in the OS\n",
+    "\n",
+    "# Managing images\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Data management\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "### Global Structures and Configurations\n",
+    "# Timezone configuration OLD SCHOOL\n",
+    "UTC = pytz.utc\n",
+    "# EST = pytz.timezone('US/Eastern')\n",
+    "# Timezone configuration NEW SCHOOL\n",
+    "# UTC = ZoneInfo.utc\n",
+    "EST = ZoneInfo('US/Eastern')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a55adfa",
+   "metadata": {},
+   "source": [
+    "## Basic Information Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b31cd699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global defintion of no data.\n",
+    "NaN = float('nan')\n",
+    "\n",
+    "# image URIs for Wind information\n",
+    "execrocksWind_url = \"https://clydebank.dms.uconn.edu/exrx_wxSens2.png\"  # Execution rocks\n",
+    "westernLIWind_url = \"https://clydebank.dms.uconn.edu/wlis_wxSens1.png\"  # Western Long Island\n",
+    "\n",
+    "# dictionary of locations within the image of the data we want.\n",
+    "windSources = {\n",
+    "    'Timestamp':          {'bounds':(100,  64, 294,  78), 'value': NaN }, #dateString for reading\n",
+    "    'WindSpeedAvg [kts]': {'bounds':( 21, 307,  63, 327), 'value': NaN,}, #kts\n",
+    "    'WindSpeedGst [kts]': {'bounds':(116, 307, 158, 327), 'value': NaN }, #kts\n",
+    "    'WindSpeedAvg [mph]': {'bounds':( 21, 334,  63, 351), 'value': NaN }, #mph\n",
+    "    'WindSpeedGst [mph]': {'bounds':(116, 334, 158, 351), 'value': NaN }, #mph\n",
+    "    'WindSpeedAvg [m/s]': {'bounds':(21, 358, 63, 375),   'value': NaN }, #m/s\n",
+    "    'WindSpeedGst [m/s]': {'bounds':(116, 358, 158, 375), 'value': NaN }, #m/s\n",
+    "    'WindDir [°]':        {'bounds':(230, 320, 287, 339), 'value': NaN }, #deg True\n",
+    "    'AirTemp [°F]':       {'bounds':(410, 169, 471, 188), 'value': NaN }, #degFarenheit\n",
+    "    'AirTemp [°C]':       {'bounds':(409, 221, 471, 238), 'value': NaN }, #degCentegrade\n",
+    "    'BaromPres [mmHg]':   {'bounds':(391, 415, 449, 434), 'value': NaN }, #barm in mmHg\n",
+    "    'BaromPres [mB]':     {'bounds':(467, 415, 537, 434), 'value': NaN }, #barm in mBar\n",
+    "    'DewPoint [°F]':      {'bounds':(505, 322, 552, 341), 'value': NaN }, #dewpoint degFarenheit\n",
+    "    'DewPoint [°C]':      {'bounds':(563, 322, 605, 341), 'value': NaN }, #dewPoint degCentegrade\n",
+    "    'RelHum [%]':         {'bounds':(391, 323, 448, 341), 'value': NaN }, #rel. humidity\n",
+    "    'WindSpeedM24 [kt]':  {'bounds':(112, 412, 150, 435), 'value': NaN }, #kts max in last 24hrs\n",
+    "    'WindDirM24 [°]':     {'bounds':(271, 412, 300, 433), 'value': NaN }, #deg True in last 24hrs\n",
+    "    'WindTimeM24':        {'bounds':(114, 433, 299, 454), 'value': NaN }, #dateString of 24Hr Max\n",
+    "}\n",
+    "\n",
+    "# image URIs for Wave information\n",
+    "westernLIWaves_url = \"https://clydebank.dms.uconn.edu/wlis_wavs.png\" \n",
+    "execrocksWaves_url = \"https://clydebank.dms.uconn.edu/exrx_wavs.png\"\n",
+    "\n",
+    "# dictionary of locations within the image of the data we want.\n",
+    "waveSources = {\n",
+    "    'Timestamp':         {'bounds':(100,  64, 294,  78), 'value': NaN },  #dateString for reading\n",
+    "    'WaveHgtSig [ft]':    {'bounds':( 68, 329, 112, 346), 'value': NaN,}, #ft\n",
+    "    'WaveHgtMax [ft]':    {'bounds':(168, 329, 212, 346), 'value': NaN }, #ft\n",
+    "    'WaveHgtSig [m]':     {'bounds':( 68, 353, 112, 371), 'value': NaN,}, #m\n",
+    "    'WaveHgtMax [m]':     {'bounds':(168, 353, 212, 371), 'value': NaN }, #m\n",
+    "    'WaveDir [°]':        {'bounds':(292, 322, 347, 340), 'value': NaN }, #degT\n",
+    "    'WavPerAvg [s]':      {'bounds':(479, 193, 539, 211), 'value': NaN }, #sec\n",
+    "    'WavPerDom [s]':      {'bounds':(479, 251, 539, 269), 'value': NaN }, #sec\n",
+    "    'WaveHgt24 [ft]':     {'bounds':(169, 413, 207, 433), 'value': NaN }, #kts max in last 24hrs\n",
+    "    'WaveDirM24 [°]':     {'bounds':(327, 412, 354, 433), 'value': NaN }, #deg True in last 24hrs\n",
+    "    'WavePerAvgM24 [s]':  {'bounds':(169, 442, 207, 433), 'value': NaN }, #deg True in last 24hrs\n",
+    "    'WaveperDomM24 [s]':  {'bounds':(542, 442, 574, 433), 'value': NaN }, #deg True in last 24hrs\n",
+    "    'WaveTimeM24':        {'bounds':(169, 433, 363, 455), 'value': NaN }, #dateString of 24Hr Max  \n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53786709-8f34-4b20-b555-c741af67384b",
    "metadata": {},
    "source": [
-    "## Build the class\n",
+    "## Build the OCR Class\n",
     " - organize the desired fields into a dictioanary\n",
     " - collect the above methods into a class.\n",
     " - refactor the methods for efficiency and maintenace."
@@ -900,32 +1012,33 @@
    "id": "27283ccb-d1de-4dbd-8dbe-6de6b3020b27",
    "metadata": {},
    "source": [
-    "## Data Storage\n",
+    "## Data Storage Class\n",
     "This is essentially a ring buffer of wind and wave data accuulated from Execution Rocks."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "edc6376f-2562-44cf-bd79-fd7d61d6e41b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from datetime import datetime, timedelta, timezone\n",
-    "\n",
     "class DataBuffer:\n",
+    "    \"\"\"\n",
+    "    This class manages a ring buffer of data stored in a CSV file. The buffer retains data for the last 3 days (72 hours) only.\n",
+    "    It uses pandas DataFrame for efficient data handling and storage. As with the OCR class above, this class is agnostic toward\n",
+    "    the type of data being stored. It could be data from wind or wave panels. The user specifies the column labels and the class manages\n",
+    "    the rest. \n",
+    "    :param labels: List of strings for the column names. (usually just: `list[waveSources.keys()]` or `list[windSources.keys()]`)\n",
+    "    :param filepath: Path to the CSV file.\n",
+    "    \"\"\"\n",
     "    def __init__(self, labels, filepath=\"sensor_data.csv\"):\n",
     "        \"\"\"\n",
-    "        :param labels: List of strings for the 12 column names.\n",
+    "        :param labels: List of strings for the column names.\n",
     "        :param filepath: Path to the CSV file.\n",
     "        \"\"\"\n",
     "        self.filepath = filepath\n",
     "        self.columns = labels\n",
-    "        \n",
-    "        if len(self.columns) != len(labels):\n",
-    "            raise ValueError(\"There is a mismatch in the number of labels and number of columns.\")\n",
     "\n",
     "        if os.path.exists(self.filepath):\n",
     "            # Load existing data and ensure the index is parsed as datetime\n",
@@ -937,16 +1050,19 @@
     "            self.df.columns = self.columns\n",
     "        else:\n",
     "            # Initialize empty DataFrame with custom labels and UTC timezone awareness\n",
-    "            self.df = pd.DataFrame(columns=self.columns)\n",
-    "            self.df.index = pd.to_datetime(self.df.index).tz_localize(timezone.utc)\n",
+    "            #    - 'data=[]' ensures it is empty\n",
+    "            #    - 'tz=\"US/Eastern\"' sets the timezone (you can use 'UTC', 'Asia/Tokyo', etc.)\n",
+    "            tz_aware_index = pd.DatetimeIndex([], dtype='datetime64[ns, US/Eastern]', name='Timestamp')\n",
+    "            self.df = pd.DataFrame(columns=self.columns, index=tz_aware_index)\n",
     "\n",
     "    def add_record(self, data_dict):\n",
     "        \"\"\"\n",
+    "        I am not sure this works as advertised.  Need to clean data source (don't need to store the bounds)\n",
     "        Appends a dictionary to the dataframe in one step.\n",
     "        :param data_dict: Dictionary where keys match self.columns.\n",
     "        \"\"\"\n",
     "        # 1. Create a timezone-aware timestamp for the current moment\n",
-    "        now = datetime.now(timezone.utc)\n",
+    "        now = datetime.now(EST)\n",
     "        \n",
     "        # 2. Single-step append: loc automatically maps dictionary keys to columns\n",
     "        self.df.loc[now] = data_dict\n",
@@ -956,7 +1072,7 @@
     "\n",
     "    def _truncate_and_save(self):\n",
     "        \"\"\"Truncates data older than 3 days and saves to CSV to persist through reboots.\"\"\"\n",
-    "        cutoff_time = datetime.now(timezone.utc) - timedelta(days=3)\n",
+    "        cutoff_time = datetime.now(EST) - timedelta(days=3)\n",
     "        # Keep only records from the last 72 hours\n",
     "        self.df = self.df[self.df.index >= cutoff_time]\n",
     "        self.df.to_csv(self.filepath)\n",
@@ -964,6 +1080,58 @@
     "    def get_data(self):\n",
     "        \"\"\"Access the dataframe for graphing or analysis.\"\"\"\n",
     "        return self.df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a37db85d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windDFBuffer = DataBuffer(list(windSources.keys()), filepath=\"wind_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b6bdac9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 0 entries\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   Timestamp           0 non-null      object\n",
+      " 1   WindSpeedAvg [kts]  0 non-null      object\n",
+      " 2   WindSpeedGst [kts]  0 non-null      object\n",
+      " 3   WindSpeedAvg [mph]  0 non-null      object\n",
+      " 4   WindSpeedGst [mph]  0 non-null      object\n",
+      " 5   WindSpeedAvg [m/s]  0 non-null      object\n",
+      " 6   WindSpeedGst [m/s]  0 non-null      object\n",
+      " 7   WindDir [°]         0 non-null      object\n",
+      " 8   AirTemp [°F]        0 non-null      object\n",
+      " 9   AirTemp [°C]        0 non-null      object\n",
+      " 10  BaromPres [mmHg]    0 non-null      object\n",
+      " 11  BaromPres [mB]      0 non-null      object\n",
+      " 12  DewPoint [°F]       0 non-null      object\n",
+      " 13  DewPoint [°C]       0 non-null      object\n",
+      " 14  RelHum [%]          0 non-null      object\n",
+      " 15  WindSpeedM24 [kt]   0 non-null      object\n",
+      " 16  WindDirM24 [°]      0 non-null      object\n",
+      " 17  WindTimeM24         0 non-null      object\n",
+      "dtypes: object(18)\n",
+      "memory usage: 0.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "windDFBuffer.get_data().info()"
    ]
   },
   {
@@ -1025,7 +1193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
