--- a/PandasPlayground.ipynb
+++ b/PandasPlayground.ipynb
@@ -24,13 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "faa8f0a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "NaN = float('nan')\n",
     "windSources = {\n",
+    "    'Timestamp':          {'bounds':(100,  64, 294,  78), 'value': NaN }, #dateString for reading\n",
     "    'WindSpeedAvg [kts]': {'bounds':( 21, 307,  63, 327), 'value': NaN,}, #kts\n",
     "    'WindSpeedGst [kts]': {'bounds':(116, 307, 158, 327), 'value': NaN }, #kts\n",
     "    'WindSpeedAvg [mph]': {'bounds':( 21, 334,  63, 351), 'value': NaN }, #mph\n",
@@ -45,14 +46,15 @@
     "    'DewPoint [°F]':      {'bounds':(505, 322, 552, 341), 'value': NaN }, #dewpoint degFarenheit\n",
     "    'DewPoint [°C]':      {'bounds':(563, 322, 605, 341), 'value': NaN }, #dewPoint degCentegrade\n",
     "    'RelHum [%]':         {'bounds':(391, 323, 448, 341), 'value': NaN }, #rel. humidity\n",
-    "    'WindTimestamp':      {'bounds':(100,  64, 294,  78), 'value': NaN }, #dateString for reading\n",
     "    'WindSpeedM24 [kt]':  {'bounds':(112, 412, 150, 435), 'value': NaN }, #kts max in last 24hrs\n",
     "    'WindDirM24 [°]':     {'bounds':(271, 412, 300, 433), 'value': NaN }, #deg True in last 24hrs\n",
     "    'WindTimeM24':        {'bounds':(114, 433, 299, 454), 'value': NaN }, #dateString of 24Hr Max\n",
     "}\n",
     "WindDataDF = pd.DataFrame(columns=[windSources.keys()])\n",
     "\n",
+    "# dictionary of locations within the image of the data we want.\n",
     "waveSources = {\n",
+    "    'Timestamp':         {'bounds':(100,  64, 294,  78), 'value': NaN },  #dateString for reading\n",
     "    'WaveHgtSig [ft]':    {'bounds':( 68, 329, 112, 346), 'value': NaN,}, #ft\n",
     "    'WaveHgtMax [ft]':    {'bounds':(168, 329, 212, 346), 'value': NaN }, #ft\n",
     "    'WaveHgtSig [m]':     {'bounds':( 68, 353, 112, 371), 'value': NaN,}, #m\n",
@@ -60,7 +62,6 @@
     "    'WaveDir [°]':        {'bounds':(292, 322, 347, 340), 'value': NaN }, #degT\n",
     "    'WavPerAvg [s]':      {'bounds':(479, 193, 539, 211), 'value': NaN }, #sec\n",
     "    'WavPerDom [s]':      {'bounds':(479, 251, 539, 269), 'value': NaN }, #sec\n",
-    "    'WaveTimestamp':      {'bounds':(100,  64, 294,  78), 'value': NaN }, #dateString for reading\n",
     "    'WaveHgt24 [ft]':     {'bounds':(169, 413, 207, 433), 'value': NaN }, #kts max in last 24hrs\n",
     "    'WaveDirM24 [°]':     {'bounds':(327, 412, 354, 433), 'value': NaN }, #deg True in last 24hrs\n",
     "    'WavePerAvgM24 [s]':  {'bounds':(169, 442, 207, 433), 'value': NaN }, #deg True in last 24hrs\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2b5949ae",
    "metadata": {},
    "outputs": [
@@ -385,159 +386,6 @@
     "df = pd.DataFrame(date_rng, columns=['date'])\n",
     "df['temperature'] = np.random.uniform(low=-10, high=30, size=(len(date_rng),))\n",
     "df = df.set_index('date')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "53c3d1b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>temperature</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 00:00:00-05:00</th>\n",
-       "      <td>17.004600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 00:15:00-05:00</th>\n",
-       "      <td>1.403512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 00:30:00-05:00</th>\n",
-       "      <td>-0.158942</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 00:45:00-05:00</th>\n",
-       "      <td>-5.641476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 01:00:00-05:00</th>\n",
-       "      <td>7.456882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 01:15:00-05:00</th>\n",
-       "      <td>21.422097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 01:30:00-05:00</th>\n",
-       "      <td>4.136642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 01:45:00-05:00</th>\n",
-       "      <td>18.354496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 02:00:00-05:00</th>\n",
-       "      <td>22.600441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 02:15:00-05:00</th>\n",
-       "      <td>15.557197</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 02:30:00-05:00</th>\n",
-       "      <td>27.397698</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 02:45:00-05:00</th>\n",
-       "      <td>-2.702596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 03:00:00-05:00</th>\n",
-       "      <td>15.603139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 03:15:00-05:00</th>\n",
-       "      <td>-1.123997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 03:30:00-05:00</th>\n",
-       "      <td>4.889123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 03:45:00-05:00</th>\n",
-       "      <td>0.178478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 04:00:00-05:00</th>\n",
-       "      <td>-7.375495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 04:15:00-05:00</th>\n",
-       "      <td>-2.371779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 04:30:00-05:00</th>\n",
-       "      <td>-3.506589</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-01 04:45:00-05:00</th>\n",
-       "      <td>13.949848</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           temperature\n",
-       "date                                  \n",
-       "2026-03-01 00:00:00-05:00    17.004600\n",
-       "2026-03-01 00:15:00-05:00     1.403512\n",
-       "2026-03-01 00:30:00-05:00    -0.158942\n",
-       "2026-03-01 00:45:00-05:00    -5.641476\n",
-       "2026-03-01 01:00:00-05:00     7.456882\n",
-       "2026-03-01 01:15:00-05:00    21.422097\n",
-       "2026-03-01 01:30:00-05:00     4.136642\n",
-       "2026-03-01 01:45:00-05:00    18.354496\n",
-       "2026-03-01 02:00:00-05:00    22.600441\n",
-       "2026-03-01 02:15:00-05:00    15.557197\n",
-       "2026-03-01 02:30:00-05:00    27.397698\n",
-       "2026-03-01 02:45:00-05:00    -2.702596\n",
-       "2026-03-01 03:00:00-05:00    15.603139\n",
-       "2026-03-01 03:15:00-05:00    -1.123997\n",
-       "2026-03-01 03:30:00-05:00     4.889123\n",
-       "2026-03-01 03:45:00-05:00     0.178478\n",
-       "2026-03-01 04:00:00-05:00    -7.375495\n",
-       "2026-03-01 04:15:00-05:00    -2.371779\n",
-       "2026-03-01 04:30:00-05:00    -3.506589\n",
-       "2026-03-01 04:45:00-05:00    13.949848"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(20)"
    ]
   },
   {
